--- a/src/app/home/events/event-info/event-info.component.html
+++ b/src/app/home/events/event-info/event-info.component.html
@@ -1,6 +1,6 @@
 <div class="reservation">
     <div class="reservation-container">
-        <div class="row">
+        <div class="row firstRow">
             <div class="image-container col-8">
                 <img [src]="details?.photo" alt="photo" width="100%" height="100%">
             </div>
@@ -29,7 +29,7 @@
             </div>
             <div class="col-4"></div>
             <div class="col-4 float-right">
-                <button class="btn btn-success col-12" [routerLink]="['/home/events/reservation']">Reservation</button>
+                <button class="btn btn-success col-11" [routerLink]="['/home/events/reservation/', details?._id]">Reservation</button>
             </div>
             
         </div>
@@ -42,13 +42,15 @@
             <div class="col-4">
                 <div class="date-event-container">
                     <h4>Date and Time :</h4>
-                    <p>from: {{details?.startDate | date: 'E, MMMM d, y,'}} {{details?.startTime | date: 'HH:mm'}}</p>
-                    <p>to: {{details?.endDate | date: 'E, MMMM d, y,'}} {{details?.endTime | date: 'HH:mm'}}</p>
+                    <p>from : {{details?.startDate | date: 'E, MMMM d, y,'}} {{details?.startTime | date: 'HH:mm'}}</p>
+                    <p>to : {{details?.endDate | date: 'E, MMMM d, y,'}} {{details?.endTime | date: 'HH:mm'}}</p>
                 </div>
+                <hr>
                 <div class="ticket-event-container">
                     <h4>Ticket Number :</h4>
                     <p>{{details?.availableTicketNumber}}</p>
                 </div>
+                <hr>
                 <div class="location-event-container">
                     <h4>Location :</h4>
                     <p>{{details?.location}}</p>
