--- a/src/app/home/events/reservation/reservation.component.css
+++ b/src/app/home/events/reservation/reservation.component.css
@@ -1,53 +1,22 @@
 .Reservation {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: url("/assets/img/Background-image/pexels-wendy-wei-1805895.jpg") top center;
     background-size: cover;
     overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
     
 }
 
-.card {
-margin-top: 60px;
-margin-left: 200px;
-
-
+.reservation-card {
+    margin-top: 100px;
+    width: 750px;
+    background:rgba(255, 255, 255, 0.836);
 }
-.card-body{
-    height: 500px;
-    width: auto;
 
 
-}
-.ticket-page--order-summary-container
-{
-
--webkit-text-size-adjust: 100%;
-font-size: 13px;
-font-family: Neue Plak,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Helvetica,Tahoma,Arial,sans-serif;
-font-weight: 100;
--webkit-font-smoothing: antialiased;
-color: var(--eds-ui-800,#39364f);
--webkit-box-direction: normal;
-margin: 0;
-padding: 0;
-overflow: auto;
-z-index: 1;
-}
-#payment{
--webkit-text-size-adjust: 100%;
-font-family: Neue Plak,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Helvetica,Tahoma,Arial,sans-serif;
--webkit-font-smoothing: antialiased;
-color: var(--eds-ui-800,#39364f);
-font-size: 20px;
-line-height: 22px;
-font-weight: 400;
-cursor: pointer;
--webkit-box-align: center;
-align-items: center;
-display: flex;
--webkit-box-orient: horizontal;
--webkit-box-direction: normal;
-flex-direction: row;
-padding: 24px 16px;
-}
