--- a/src/app/home/events/card-event/card-event.component.css
+++ b/src/app/home/events/card-event/card-event.component.css
@@ -1,11 +1,10 @@
 .card-content {
+    min-height: 750px;
     background: url("/assets/img/Background-image/home-bg.jpg") top center;
     background-size: cover;
     overflow: hidden;
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    align-items: center;
     position: absolute;
     left: 0;
     top: 0;
