--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -185,7 +185,7 @@
                                     class="fa fa-plus"></i> Add event</button>
                         </div>
                     </div>
-                    <table class="table table-striped table-hover">
+                    <table class="table table-striped table-hover" *ngIf="listEvents">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -199,15 +199,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="" *ngFor="let event of listEvents | searchpipe:searchEvent ;let i=index">
+                            <tr class="" *ngFor="let event of listEvents.events | searchpipe:searchEvent ;let i=index">
                                 <td>{{i+1}}</td>
-                                <td>{{event.eventName}}</td>
-                                <td>{{event.eventDescription | slice:0:25}}
+                                <td>{{event?.eventName}}</td>
+                                <td>{{event?.eventDescription | slice:0:25}}
                                     <span *ngIf="event.eventDescription.length > 100">...</span>
                                 </td>
-                                <td>{{event.startDate | date: 'MM/dd/y'}} ==> {{event.endDate | date: 'MM/dd/y'}}</td>
-                                <td>{{event.eventType}}</td>
-                                <td>{{event.price | currency : 'TND': true}}</td>
+                                <td>{{event?.startDate | date: 'MM/dd/y'}} ==> {{event?.endDate | date: 'MM/dd/y'}}</td>
+                                <td>{{event?.eventType}}</td>
+                                <td>{{event?.price | currency : 'TND': true}}</td>
                                 <td><img [src]="event.photo" width="50px" height="50px" alt=""></td>
                                 <td>
                                     <button type="button" class="btn btn-warning text-white" data-toggle="modal"
