--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -139,10 +139,10 @@
                 <td>{{ company.email }}</td>
                 <td>{{ company.role }}</td>
                 <td>
-                  <button type="button" class="btn btn-warning text-white" data-toggle="modal" (click)="showUpdate(company._id)">
+                  <button type="button" class="btn btn-warning text-white" data-toggle="modal" (click)="showUpdate(company._id)" *ngIf="(connectedCompanyRole !== 'Admin') || (connectedCompanyRole == 'Admin' && connectedCompanyId == company._id)">
                     <i class="fa fa-edit"></i>
                   </button>
-                  <button type="button" class="btn btn-danger  text-white" *ngIf="connectedCompanyId !== company._id"
+                  <button type="button" class="btn btn-danger  text-white" *ngIf="connectedCompanyRole !== 'Admin'"
                     (click)='deletecompany(company._id)'><i class="fa fa-trash"></i></button>
                 </td>
               </tr>
